--- a/IronBank/13/requirements.txt
+++ b/IronBank/13/requirements.txt
@@ -8,12 +8,12 @@ argcomplete==2.0.0
 azure-core==1.21.1
 azure-identity==1.7.1
 azure-storage-blob==12.9.0
-barman[azure,cloud]==2.18
+barman[azure,cloud,snappy]==2.18
 boto3==1.20.46
 botocore==1.23.46
 certifi==2021.10.8
 cffi==1.15.0
-charset-normalizer==2.0.10
+charset-normalizer==2.0.11
 cryptography==36.0.1
 idna==3.3
 isodate==0.6.1
@@ -27,6 +27,7 @@ psycopg2==2.9.3
 pycparser==2.21
 pyjwt[crypto]==2.3.0
 python-dateutil==2.8.2
+python-snappy==0.6.0
 requests==2.27.1
 requests-oauthlib==1.3.1
 s3transfer==0.5.0
