--- a/UBI/12/Dockerfile.postgis-multilang
+++ b/UBI/12/Dockerfile.postgis-multilang
@@ -1,44 +1,31 @@
 # vim:set ft=dockerfile:
 FROM quay.io/enterprisedb/edb-ubi:8.7-1037
+ARG SUBSCRIPTION_NAME
 
 # Do not split the description, otherwise we will see a blank space in the labels
-LABEL name="PostgreSQL Container Images" \
+LABEL name="PostgreSQL + PostGIS Container Images" \
       vendor="EnterpriseDB" \
       url="https://www.enterprisedb.com/" \
-      version="13.9-1PGDG.rhel8" \
+      version="12.13-1PGDG.rhel8" \
       release="2" \
-      summary="PostgreSQL Container images." \
-      description="This Docker image contains PostgreSQL and Barman Cloud based on RedHat Universal Base Images (UBI) 8."
+      summary="PostgreSQL + PostGIS Container images." \
+      description="This Docker image contains PostgreSQL, PostGIS and Barman Cloud based on RedHat Universal Base Images (UBI) 8."
 
 COPY root/ /
 
-ARG TARGETARCH
-RUN --mount=type=secret,id=cs_script,target=/run/secrets/cs_script.sh \
-	set -xe ; \
-	ARCH="${TARGETARCH}" ; \
-	base_url="https://download.postgresql.org/pub/repos/yum/reporpms" ; \
-	case $ARCH in \
-			amd64) \
-					yum -y install "${base_url}/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm" ;; \
-			ppc64le) \
-					bash /run/secrets/cs_script.sh ;; \
-			s390x) \
-					bash /run/secrets/cs_script.sh ;; \
-			*) \
-					exit 1 ;; \
-	esac ; \
+RUN set -xe ; \
 	yum -y upgrade glibc-common ; \
 	yum -y reinstall glibc-common ; \
 	rm -fr /etc/rpm/macros.image-language-conf ; \
 	yum -y install hostname rsync tar gettext bind-utils nss_wrapper glibc-locale-source glibc-langpack-en glibc-all-langpacks ; \
+	yum -y install https://download.postgresql.org/pub/repos/yum/reporpms/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm ; \
 	yum -y --setopt=tsflags=nodocs install \
-		postgresql13-13.9-1PGDG.rhel8 \
-		postgresql13-contrib-13.9-1PGDG.rhel8 \
-		postgresql13-server-13.9-1PGDG.rhel8 \
-		postgresql13-libs-13.9-1PGDG.rhel8 \
-		pgaudit15_13 \
+		postgresql12-12.13-1PGDG.rhel8 \
+		postgresql12-contrib-12.13-1PGDG.rhel8 \
+		postgresql12-server-12.13-1PGDG.rhel8 \
+		postgresql12-libs-12.13-1PGDG.rhel8 \
+		pgaudit14_12 \
 	; \
-	rm -fr /etc/yum.repos.d/enterprisedb-*.repo ; \
 	rm -fr /tmp/* ; \
 	yum -y clean all --enablerepo='*'
 
@@ -51,8 +38,8 @@ RUN set -xe ; \
 
 # make the sample config easier to munge (and "correct by default")
 RUN set -eux; \
-	sed -ri "s!^#?(listen_addresses)\s*=\s*\S+.*!\1 = '*'!" /usr/pgsql-13/share/postgresql.conf.sample; \
-	grep -F "listen_addresses = '*'" /usr/pgsql-13/share/postgresql.conf.sample
+	sed -ri "s!^#?(listen_addresses)\s*=\s*\S+.*!\1 = '*'!" /usr/pgsql-12/share/postgresql.conf.sample; \
+	grep -F "listen_addresses = '*'" /usr/pgsql-12/share/postgresql.conf.sample
 
 # prepare the environment and make sure postgres user has the correct UID
 RUN set -xeu ; \
@@ -62,7 +49,7 @@ RUN set -xeu ; \
 	chown postgres:postgres /var/run/postgresql ; \
 	chmod 0755 /var/run/postgresql
 
-ENV PATH $PATH:/usr/pgsql-13/bin
+ENV PATH $PATH:/usr/pgsql-12/bin
 
 RUN mkdir -p /var/run/postgresql && chown -R postgres:postgres /var/run/postgresql && chmod 2777 /var/run/postgresql
 
@@ -72,6 +59,25 @@ RUN mkdir -p "$PGDATA" && chown -R postgres:postgres "$PGDATA" && chmod 777 "$PG
 VOLUME /var/lib/postgresql/data
 
 RUN mkdir /docker-entrypoint-initdb.d
+
+# Postgis
+RUN --mount=type=secret,id=subscription,target=/run/secrets/subscription.sh \
+  set -xe ; \
+  rm -f /etc/rhsm-host ; \
+  SUBSCRIPTION_NAME="${SUBSCRIPTION_NAME}" bash /run/secrets/subscription.sh ; \
+  yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm ; \
+  yum -y install --enablerepo=ubi-8-codeready-builder,codeready-builder-for-rhel-8-x86_64-rpms \
+  postgis33_12-3.3.2-1.rhel8 ; \
+  yum -y remove epel-release ; \
+  subscription-manager remove --all ; \
+  subscription-manager unregister ; \
+  subscription-manager clean ; \
+  yum -y clean all --enablerepo='*' ; \
+  ln -sf /run/secrets/rhsm /etc/rhsm-host ; \
+  rm /var/log/rhsm/rhsm.log
+
+COPY ./initdb-postgis.sh /docker-entrypoint-initdb.d/10_postgis.sh
+COPY ./update-postgis.sh /usr/local/bin
 
 # DoD 2.3 - remove setuid/setgid from any binary that not strictly requires it, and before doing that list them on the stdout
 RUN find / -not -path "/proc/*" -perm /6000 -type f -exec ls -ld {} \; -exec chmod a-s {} \; || true
