--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,7 +106,7 @@ jobs:
         secrets: |
           "cs_script=${{ secrets.CS_SCRIPT }}"
           "subscription=${{ secrets.SUBSCRIPTION }}"
-        # Available architecture on UBI8 are: linux/amd64, linux/s390x, linux/ppc64le
+        # Available architecture on UBI8 are: linux/amd64, linux/s390x, linux/ppc64le, linux/arm64
         platforms: ${{ matrix.platforms }}
         push: true
         tags: ${{ env.TAGS }}
