--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,10 +58,6 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
-      with:
-        # TODO: Remove workaround once https://github.com/docker/build-push-action/issues/761 is fixed
-        driver-opts: |
-          image=moby/buildkit:v0.10.6
 
     - name: Login to quay.io
       uses: docker/login-action@v2
@@ -112,6 +108,7 @@ jobs:
           "subscription=${{ secrets.SUBSCRIPTION }}"
         # Available architecture on UBI8 are: linux/amd64, linux/s390x, linux/ppc64le, linux/arm64
         platforms: ${{ matrix.platforms }}
+        provenance: false
         push: true
         tags: ${{ env.TAGS }}
         labels: ${{ github.ref != 'refs/heads/main' && 'quay.expires-after=7d' || '' }}
