--- a/UBI/Dockerfile-multilang.template
+++ b/UBI/Dockerfile-multilang.template
@@ -43,9 +43,13 @@ RUN --mount=type=secret,id=cs_token \
 		postgresql%%PG_MAJOR%%-contrib-%%POSTGRES_VERSION%% \
 		postgresql%%PG_MAJOR%%-server-%%POSTGRES_VERSION%% \
 		postgresql%%PG_MAJOR%%-libs-%%POSTGRES_VERSION%% \
-		pgaudit%%PGAUDIT_VERSION%%_%%PG_MAJOR%% \
 		"$pg_failover_slots_pkg" \
 	; \
+	if [ "$PG_MAJOR" -lt "16" ]; then \
+		yum -y --setopt=tsflags=nodocs install%%YUM_OPTIONS%% \
+			pgaudit%%PGAUDIT_VERSION%%_%%PG_MAJOR%% \
+		; \
+	fi; \
 	rm -fr /etc/yum.repos.d/enterprisedb-*.repo ; \
 	rm -fr /tmp/* ; \
 	yum -y clean all --enablerepo='*'
