--- a/UBI/Dockerfile-postgis.template
+++ b/UBI/Dockerfile-postgis.template
@@ -33,9 +33,13 @@ RUN set -xe ; \
 		postgresql%%PG_MAJOR%%-contrib-%%POSTGRES_VERSION%% \
 		postgresql%%PG_MAJOR%%-server-%%POSTGRES_VERSION%% \
 		postgresql%%PG_MAJOR%%-libs-%%POSTGRES_VERSION%% \
-		pgaudit%%PGAUDIT_VERSION%%_%%PG_MAJOR%% \
 		pg_failover_slots_%%PG_MAJOR%% \
 	; \
+	if [ "$PG_MAJOR" -lt "16" ]; then \
+		yum -y --setopt=tsflags=nodocs install%%YUM_OPTIONS%% \
+			pgaudit%%PGAUDIT_VERSION%%_%%PG_MAJOR%% \
+		; \
+	fi; \
 	rm -fr /tmp/* ; \
 	yum -y clean all --enablerepo='*'
 
