--- a/UBI/Dockerfile-multiarch.template
+++ b/UBI/Dockerfile-multiarch.template
@@ -38,7 +38,7 @@ RUN --mount=type=secret,id=cs_token \
 			s390x) \
 					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/edb/setup.rpm.sh | bash ; \
 					pg_failover_slots_pkg="edb-pg%%PG_MAJOR%%-pg-failover-slots1" ; \
-					pg_squeeze_pkg="edb-pg%%PG_MAJOR%%-pg-failover-slots1" ; \
+					pg_squeeze_pkg="edb-pg%%PG_MAJOR%%-pg-squeeze1" ; \
 					pg_audit_pkg="edb-pg%%PG_MAJOR%%-pgaudit1" ; \
 					if [ "%%PG_MAJOR%%" -gt "15" ]; then pg_audit_pkg="edb-pg%%PG_MAJOR%%-pgaudit%%PG_MAJOR%%"; fi ;; \
 			*) \
