--- a/UBI/Dockerfile-postgis-multiarch.template
+++ b/UBI/Dockerfile-postgis-multiarch.template
@@ -22,6 +22,7 @@ RUN --mount=type=secret,id=cs_token \
 	pg_squeeze_pkg="pg_squeeze_%%PG_MAJOR%%" ; \
 	pgvector="pgvector_%%PG_MAJOR%%" ; \
 	pg_audit_pkg="pgaudit%%PGAUDIT_VERSION%%_%%PG_MAJOR%%" ; \
+	wal2json_pkg="wal2json_%%PG_MAJOR%%" ; \
 	case $ARCH in \
 			amd64) \
 					yum -y install "${base_url}/EL-%%UBI_MAJOR_VERSION%%-x86_64/pgdg-redhat-repo-latest.noarch.rpm" ; \
@@ -37,6 +38,7 @@ RUN --mount=type=secret,id=cs_token \
 					pg_squeeze_pkg="edb-pg%%PG_MAJOR%%-pg-squeeze1" ; \
 					pgvector="edb-pg%%PG_MAJOR%%-pgvector0" ; \
 					pg_audit_pkg="edb-pg%%PG_MAJOR%%-pgaudit1" ; \
+					wal2json_pkg="edb-pg%%PG_MAJOR%%-wal2json2" ; \
 					if [ "%%PG_MAJOR%%" -gt "15" ]; then pg_audit_pkg="edb-pg%%PG_MAJOR%%-pgaudit%%PG_MAJOR%%"; fi ;; \
 			s390x) \
 					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/edb/setup.rpm.sh | bash ; \
@@ -44,6 +46,7 @@ RUN --mount=type=secret,id=cs_token \
 					pg_squeeze_pkg="edb-pg%%PG_MAJOR%%-pg-squeeze1" ; \
 					pgvector="edb-pg%%PG_MAJOR%%-pgvector0" ; \
 					pg_audit_pkg="edb-pg%%PG_MAJOR%%-pgaudit1" ; \
+					wal2json_pkg="edb-pg%%PG_MAJOR%%-wal2json2" ; \
 					if [ "%%PG_MAJOR%%" -gt "15" ]; then pg_audit_pkg="edb-pg%%PG_MAJOR%%-pgaudit%%PG_MAJOR%%"; fi ;; \
 			*) \
 					exit 1 ;; \
@@ -61,6 +64,7 @@ RUN --mount=type=secret,id=cs_token \
 			"$pg_squeeze_pkg" \
 			"$pg_failover_slots_pkg" \
 			"$pgvector" \
+			"$wal2json_pkg" \
 	; \
 	rm -fr /etc/yum.repos.d/enterprisedb-*.repo ; \
 	rm -fr /tmp/* ; \
